# Tactobot

./: README.md  README.txt  dump.rdb  redis.conf  setup.sh
applications-linux/manips-wam-redis-server/: CMakeLists.txt  CManipsWamDriver.cpp  CManipsWamDriver.hpp  README  make_dbg.sh  make_rel.sh  manips_wam_redis_driver  manips_wam_redis_main.cpp
applications-linux/manips-wam-redis-server/build_rel/: CMakeCache.txt  Makefile  cmake_install.cmake
applications-linux/tactobot-ee368/: CMakeLists.txt  STaskOpOri.hpp  delme.cpp  scl_tutorial5_control_multi_task.cpp
applications-linux/tactobot-ee368/build_rel/: CMakeCache.txt  Makefile  cmake_install.cmake  scl_tutorial5_control_multi_task
applications-linux/tactobot-ee368/qtbuild/: CMakeCache.txt  Makefile  Tactobot_hardcode.cbp  cmake_install.cmake
applications-linux/tactobot_actual_bot/: CMakeLists.txt  CTaskOpPosition.hpp  STaskOpOri.cpp  scl_tutorial5_control_multi_task.cpp
applications-linux/tactobot_actual_bot/build_rel/: CMakeCache.txt  Makefile  cmake_install.cmake  scl_tutorial5_control_multi_task
applications-linux/tactobot_actual_bot/opposcontroller(1)/: STaskOpPosition.hpp
applications-linux/tactobot_actual_bot/qt_build/: CMakeCache.txt  Makefile  Tactobot_hardcode.cbp  cmake_install.cmake
applications-linux/tactobot_hardcode/: CExampleApp.cpp  CExampleApp.hpp  CMakeLists.txt  scl_tutorial5_control_multi_task.cpp
applications-linux/tactobot_hardcode/build_rel/: CMakeCache.txt  Makefile  cmake_install.cmake  scl_tutorial5_control_multi_task
applications-linux/tactobot_hardcode/qt_build/: CMakeCache.txt  Makefile  Tactobot_hardcode.cbp  cmake_install.cmake
applications-linux/tactobot_main/: CMakeLists.txt  CTaskOpForce.cpp  CTaskOpOri.cpp  STaskOpForce.cpp  STaskOpForce.hpp  STaskOpOri.cpp  STaskOpOri.hpp  STaskOpPosition.hpp  dump.rdb  make_rel.sh  tactobot_main  tactobot_main.cpp  tactobot_main_old.cpp
applications-linux/tactobot_main/build_rel/: CMakeCache.txt  Makefile  cmake_install.cmake
applications-linux/tactobot_main/force_sensors/jr3/Jr3PciDriver/: insertModule
applications-linux/tactobot_main/force_sensors/jr3/Jr3PciDriver/common/: dspfunc.c
applications-linux/tactobot_main/force_sensors/jr3/Jr3PciDriver/drv_linux/: Makefile  download.c
applications-linux/tactobot_main/force_sensors/jr3/Jr3PciDriver/include/: fsensorLib.h  jr3_linux.h  jr3_lxrt.h
applications-linux/tactobot_main/newcontrollers/: CTaskOpOri.cpp  CTaskOpPosition.cpp  STaskOpOri.cpp  STaskOpOri.hpp  STaskOpPosition.cpp  STaskOpPosition.hpp
applications-linux/tactobot_main/old_controllers/: CTaskOpOri.cpp  CTaskOpOri.hpp  STaskOpPosition.cpp
applications-linux/tactobot_main/qt_build/: CMakeCache.txt  Makefile  cmake_install.cmake  tactobot_main.cbp
applications-linux/tactobot_main_smod/: CTaskOpForce.hpp  CTaskOpPosition.cpp  STaskOpPosition.cpp  wam_with_hand.xml
applications-linux/tactobot_main_smod/force_sensors/jr3/Jr3PciDriver/: Makefile
applications-linux/tactobot_main_smod/force_sensors/jr3/Jr3PciDriver/drv_linux/: .jr3base.o.cmd  jr3.mod.c  jr3base.c
applications-linux/tactobot_main_smod/force_sensors/jr3/Jr3PciDriver/include/: dspfunc.h  jr3.h  pcidsp.h
applications-linux/tactobot_opti_calib/: .cproject  .project  CMakeLists.txt  CTaskOpPosition.cpp  OptitrackCallib.txt  make_rel.sh  scl_tutorial5_control_multi_task.cpp~  tactobot_opti_calib.cpp
applications-linux/tactobot_opti_calib/build_rel/: CMakeCache.txt  Makefile  cmake_install.cmake  tactobot_opti_calib
applications-linux/tactobot_opti_calib/qt_build/: CMakeCache.txt  Makefile  Tactobot_OptiTrackCallibration.cbp  cmake_install.cmake
applications-linux/wam_shmem_serv/: CMakeLists.txt  README  make_dbg.sh  make_rel.sh  wam_shmem_serv_main.cpp
specs/Barrett/: wam.xml  wamCfg.xml  wamCfg.xml~
specs/GraphicObjects/: Env.mtl  Env.mtl~  Tool.mtl  Tray.mtl~
src/scl-wam/: SShmObjWAM.hpp
